--- a/app/src/main/res/layout/activity_cprogramming.xml
+++ b/app/src/main/res/layout/activity_cprogramming.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:orientation="vertical"
     tools:context=".C_Programming">
 
@@ -16,16 +17,29 @@
 <!--        android:layout_margin="5dp"-->
 <!--        app:queryHint="Search"/>-->
 
+    <ProgressBar
+        android:id="@+id/c_progressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="339dp"
+        android:layout_marginBottom="344dp"
+        android:foregroundGravity="center"
+        android:gravity="center" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/c_recycleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-/>
+        android:layout_marginBottom="1dp" />
 
 
-
-</LinearLayout>
+</RelativeLayout>
