create third_semester_activity_and work properlly setonclick listner

--- a/app/src/main/res/layout/activity_co_first_sem_basic_science.xml
+++ b/app/src/main/res/layout/activity_co_first_sem_basic_science.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".Co_Second_sem_subject.Cpp_Programming">
+    tools:context=".Co_first_sem_subject.Co_first_sem_basic_science">
 
     <!--    <android.support.v7.widget.SearchView-->
     <!--        android:layout_width="match_parent"-->
