--- a/app/src/main/res/layout/activity_co_first_sem_english.xml
+++ b/app/src/main/res/layout/activity_co_first_sem_english.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".Co_Second_sem_subject.Cpp_Programming">
+    tools:context=".Co_first_sem_subject.Co_first_sem_English">
 
     <!--    <android.support.v7.widget.SearchView-->
     <!--        android:layout_width="match_parent"-->
@@ -18,7 +18,7 @@
     <!--        app:queryHint="Search"/>-->
 
     <ProgressBar
-        android:id="@+id/cpp_progressbar"
+        android:id="@+id/co_first_sem_english_progressbar"
         style="?android:attr/progressBarStyle"
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -32,7 +32,7 @@
         android:gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cpp_recycleview"
+        android:id="@+id/co_first_sem_english_recycleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
