Temparory work done ... means it subject such as c, cpp work successfully retrieve data

--- a/app/src/main/res/layout/activity_java_programming.xml
+++ b/app/src/main/res/layout/activity_java_programming.xml
@@ -1,95 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".Cpp_Programming">
-    <LinearLayout
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    tools:context=".PHP_Activity">
+
+    <!--    <android.support.v7.widget.SearchView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:id="@+id/searchView"-->
+    <!--        android:padding="10dp"-->
+    <!--        android:layout_margin="5dp"-->
+    <!--        app:queryHint="Search"/>-->
+
+    <ProgressBar
+        android:id="@+id/java_progressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="339dp"
+        android:layout_marginBottom="344dp"
+        android:foregroundGravity="center"
+        android:gravity="center" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/java_recycleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center"
-        >
-
-        <TextView
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:text="Fill Attandance Here"
-            android:textAlignment="center"
-            android:textColor="#4EF407"
-            android:textSize="28sp"
-            android:textStyle="italic" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp" />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_marginTop="16sp"
-            android:layout_height="match_parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/java_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="type your name here" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_marginTop="16sp"
-            android:layout_height="match_parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/java_branch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="type your Branch Name here" />
-
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_marginTop="16sp"
-            android:layout_height="match_parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/java_roll_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="type your roll no here" />
-
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_marginTop="16sp"
-            android:layout_height="match_parent">
-
-
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upload Attendance"
-            android:textSize="14dp"
-            android:onClick="process"
-            android:layout_marginTop="2dp"
-            android:textAllCaps="false"
-            android:id="@+id/mbtn_java_upload_attandance"/>
-
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
