--- a/app/src/main/res/layout/activity_cprogramming.xml
+++ b/app/src/main/res/layout/activity_cprogramming.xml
@@ -7,18 +7,18 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".C_Programming">
+    tools:context=".C_programming">
 
-<!--    <android.support.v7.widget.SearchView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:id="@+id/searchView"-->
-<!--        android:padding="10dp"-->
-<!--        android:layout_margin="5dp"-->
-<!--        app:queryHint="Search"/>-->
+    <!--    <android.support.v7.widget.SearchView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:id="@+id/searchView"-->
+    <!--        android:padding="10dp"-->
+    <!--        android:layout_margin="5dp"-->
+    <!--        app:queryHint="Search"/>-->
 
     <ProgressBar
-        android:id="@+id/c_progressbar"
+        android:id="@+id/C_progressbar"
         style="?android:attr/progressBarStyle"
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -32,7 +32,7 @@
         android:gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/c_recycleview"
+        android:id="@+id/C_recycleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
